--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -3,8 +3,84 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin-top: 10px;
 }
-@media screen and (max-width:768px){
+@media screen and (max-width:479px){
+  .after-link{
+    color: var(--accent-color);
+    text-decoration: none;
+  }
+  .main-header{
+    position: relative;
+  }
+  .nav-list{
+    display: none;
+  }
+  .header-feedback{
+    display: none;
+  }
+  .mobile-menu__nav-list{
+    list-style: none;
+  }
+.mobile-menu__nav-list-border:not(:last-child){
+  border-style: solid;
+    border-width: 1px;
+    border-top: none;
+    border-left: none;
+    border-bottom: none;
+    margin-bottom: 0;
+    border-color: var(--primary-text-color);
+    padding-right: 10px;
+}
+.mobile-menu__nav-list-border:not(:first-child){
+  padding-left: 10px;
+}
+  .mobile-menu_nav-list-link{
+    text-decoration: none;
+    color: var(--contact-color);
+  }
+  .mobile-menu_nav-list-link-main{
+    font-family: Roboto;
+font-size: 40px;
+font-weight: 500;
+line-height: 47px;
+letter-spacing: 0.02em;
+text-align: left;
+  }
+  .mobile-menu_nav-pos{
+    display: flex;
+    margin-bottom: 0;
+    flex-wrap: wrap;
+  }
+.mobile-menu_nav-list-link-num{
+font-size: 34px;
+line-height: 40px;
+color: var(--accent-color);
+  }
+.mobile-menu_nav-list-link-mail{
+  font-size: 24px;
+  line-height: 28px; 
+  color: var(--feedback-color);
+  }
+.mobile-menu_nav-list-link-social{ 
+font-size: 18px;
+line-height: 22px;
+color: var(--accent-color);
+}
+.mobile-menu_nav-margin{
+  margin-bottom: 140px;
+}
+.mobile-menu__nav-list-links:not(:last-child){
+  margin-bottom: 32px;
+}
+.mobile-menu__nav-list-margin:not(:last-child){
+margin-bottom: 32px;
+}
+.mobile-menu_nav-link-margin{
+  margin-bottom: 64px;
+}
+}
+@media screen and (min-width:480px){
   .after-link{
     color: var(--accent-color);
     text-decoration: none;
