--- a/sass/layout/portfolio/_potrfolio-links.scss
+++ b/sass/layout/portfolio/_potrfolio-links.scss
@@ -1,4 +1,110 @@
-@media screen and (min-width:320px){
+@media screen and (max-width:479px){
+  .portfolio-headers {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+    margin-bottom: 4px;
+    margin-top: 0;
+  }
+  .text-portfolio-theme {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 28px;
+    letter-spacing: 0.03em;
+    padding: 64px 24px;
+    color: var(--text-color);
+  }
+  .headers-veiw {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.8;
+    letter-spacing: 0.03em;
+    color: var(--feedback-color);
+    margin-bottom: 0;
+    margin-top: 0;
+  }
+  .employees__card-size{
+    width: 100%;
+    object-fit: cover;
+    height: auto;
+  }
+  .portfolio-background {
+    padding-top: 60px;
+    padding-bottom: 94px;
+  }
+  .text-portfolio {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    width: 100%;
+    height: 294px;
+    background: rgba(33, 150, 243, 0.9);
+    position: absolute;
+    bottom: 0;
+    top: 75%;
+    text-align: center;
+    z-index: 1;
+    transition: top 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    .employees__card-portfolio-link:hover &,
+    .employees__card-portfolio-link:focus & {
+      top: 0;
+    }
+  }
+  .border-color {
+    border-width: 1px;
+    border-style: solid;
+    border-color: var(--background-buttons-color);
+    border-top: none;
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: var(--text-color);
+    position: relative;
+    z-index: 2;
+  }
+  .employees__card-portfolio {
+    margin-top: 30px;
+  }
+  .employees__card-portfolio-link {
+    display: flex;
+    flex-direction: column;
+    text-decoration: none;
+    color: var(--primary-text-color);
+    position: relative;
+    overflow: hidden;
+    height: 100%;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    &:focus,
+    &:hover {
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+  }
+  .employees__card {
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+      0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+    background-color: var(--text-color);
+  }
+}
+
+@media screen and (min-width:480px){
+  .text-portfolio-theme {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: 0.03em;
+    padding: 64px 24px;
+    color: var(--text-color);
+  }
   .portfolio-headers {
     font-style: normal;
     font-weight: 700;
@@ -31,7 +137,7 @@
     align-items: center;
     justify-content: center;
     display: flex;
-    width: 450px;
+    width: 100%;
     height: 294px;
     background: rgba(33, 150, 243, 0.9);
     position: absolute;
@@ -98,7 +204,7 @@
     width: 354px;
   }
   .text-portfolio {
-    width: 354px;
+    width: 100%;
   }
   .employees {
     display: flex;
