--- a/sass/componets/main/_modal-window.scss
+++ b/sass/componets/main/_modal-window.scss
@@ -4,8 +4,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 290px;
-    height: 540px;
+    width: 90%;
+    height: 90%;
     background-color: var(--text-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -101,10 +101,11 @@
     margin-bottom: 12px;
   }
   .contact-form-btn {
-    padding: 10px 24px;
-    width: 100%;
-    height: auto;
-    // margin: 0 auto;
+    // padding: 5px 10px;
+    width: 70%;
+    height: 30px;
+    margin-left: auto;
+    margin-right: auto;
     display: block;
     font-style: normal;
     font-weight: 700;
@@ -118,6 +119,7 @@
     color: var(--text-color);
     background: var(--accent-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    text-align: center;
   
     &:hover,
     &:focus {
