--- a/sass/componets/main/_modal-window.scss
+++ b/sass/componets/main/_modal-window.scss
@@ -5,7 +5,8 @@
     left: 50%;
     transform: translate(-50%, -50%);
     width: 90%;
-    height: 90%;
+    height: 540px;
+    margin-top:5px;
     background-color: var(--text-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -101,9 +102,7 @@
     margin-bottom: 12px;
   }
   .contact-form-btn {
-    // padding: 5px 10px;
-    width: 70%;
-    height: 30px;
+    padding: 10px 52px;
     margin-left: auto;
     margin-right: auto;
     display: block;
