--- a/css/main.css
+++ b/css/main.css
@@ -714,14 +714,13 @@ footer {
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .contact-form-checkbox-label {
-    display: flex;
+    margin-bottom: 20px;
     align-items: center;
-    margin-bottom: 10px;
     font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
-    font-size: 8px;
-    line-height: 24px;
+    font-size: 70%;
+    line-height: 14px;
     letter-spacing: 0.03em;
     color: var(--feedback-color);
   }
@@ -797,6 +796,7 @@ footer {
   }
   .contact-form-btn {
     padding: 10px 52px;
+    margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
     display: block;
@@ -872,6 +872,7 @@ footer {
     resize: none;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+    margin-bottom: 10px;
   }
   .contact-form-message:focus {
     outline: none;
@@ -882,7 +883,8 @@ footer {
   }
   .input-contact-form-checkbox {
     position: relative;
-    top: 20px;
+    top: -10px;
+    left: 10px;
   }
 }
 @media screen and (min-width: 480px) {
