--- a/sass/componets/main/_modal-window.scss
+++ b/sass/componets/main/_modal-window.scss
@@ -14,16 +14,17 @@
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   .contact-form-checkbox-label {
-    display: flex;
+    margin-bottom: 20px;
+    
     align-items: center;
-    margin-bottom: 10px;
     font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
-    font-size: 8px;
-    line-height: 24px;
+    font-size: 70%;
+    line-height: 14px;
     letter-spacing: 0.03em;
     color: var(--feedback-color);
+    
     
   
     &::before {
@@ -103,6 +104,7 @@
   }
   .contact-form-btn {
     padding: 10px 52px;
+    margin-top: 10px;
     margin-left: auto;
     margin-right: auto;
     display: block;
@@ -183,6 +185,7 @@
     resize: none;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
+    margin-bottom: 10px;
   
     &:focus {
       outline: none;
@@ -195,7 +198,8 @@
   }
   .input-contact-form-checkbox {
     position: relative;
-    top: 20px;
+    top: -10px;
+    left: 10px;
   }
 }
 @media screen and (min-width:480px){
